base/planner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: synesis-planner
  labels:
    app.kubernetes.io/part-of: synesis
